<resources>
    <string name="app_name">Employee Management</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="department_list">Department List</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="department">Department</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="position">Position</string>
    <string name="joindate">Join Date</string>
    <string name="leavedate">Leave Date</string>
    <string name="avartar">Avartar</string>
    <string name="status">Status</string>
    <string name="add_new">Add a new employee</string>
    <string name="result">Result</string>
    <string name="intent_select_picute">Select Picture</string>
    <string name="slash">/</string>
    <string name="msg_no_data">No Data</string>
    <string name="image_type">image/*</string>
    <string name="tag">tag</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question_edit_employee">Do you want to edit this employee?</string>
    <string name="folder_photo">EMSPhoto</string>
    <string name="display_mode">DisplayMode</string>
    <string name="employee_list_mode">EmployeeListMode</string>
    <string name="format_date">%1$s/%2$s/%3$s</string>
    <string name="format_image_path">%1$s/%2$s</string>
    <string name="format_employee_detail">Position: %1$s Leave Date:%2$s</string>
    <string-array name="deparmentSpinner_array">
        <item>None</item>
        <item>Division 1</item>
        <item>Division 2</item>
        <item>Division 3</item>
        <item>Education</item>
    </string-array>
    <string-array name="deparmentListview_array">
        <item>Division 1</item>
        <item>Division 2</item>
        <item>Division 3</item>
        <item>Education</item>
    </string-array>
    <string-array name="position_array">
        <item>Developer</item>
        <item>Tester</item>
        <item>Manager</item>
        <item>Vice Manage</item>
        <item>Team Leader</item>
        <item>Technical Leader</item>
    </string-array>
    <string-array name="status_array">
        <item>Premium employee</item>
        <item>Parttime</item>
        <item>Internship</item>
        <item>Temporary</item>
    </string-array>
    <string-array name="place_of_birth_array">
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
        <item>Phú Yên</item>
        <item>Cần Thơ</item>
        <item>Đà Nẵng</item>
        <item>Hải Phòng</item>
        <item>Hà Nội</item>
        <item>TP HCM</item>
    </string-array>
</resources>
