<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout">

        <ImageView
            android:src="@drawable/ic_launcher"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_gravity="center_horizontal"
            android:id="@+id/imLogo"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/txEmp"
                    android:layout_column="1"
                    android:allowUndo="false"
                    android:textStyle="bold" />
                <EditText
                    android:layout_width="@dimen/name_width"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txEmployeeMain"
                    android:layout_column="2" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department"
                    android:id="@+id/textView"
                    android:layout_column="1"
                    android:textStyle="bold" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spDepMain"
                    android:spinnerMode="dropdown"
                    android:layout_column="2" />
            </TableRow>

        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_gravity="right"
            android:id="@+id/btMain"
            android:onClick="setListFooter" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/department_list"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_height"
            android:id="@+id/listDivMain"
            android:layout_gravity="center_horizontal"
            android:choiceMode="singleChoice" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_new"
            android:id="@+id/btAdd" />

    </LinearLayout>
</RelativeLayout>
