<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout">


        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/nameList"
                    android:layout_column="1"
                    android:allowUndo="false"
                    android:textStyle="bold" />
                <EditText
                    android:layout_width="@dimen/name_width"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txEmployeeList"
                    android:layout_column="2" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:layout_gravity="right"
                    android:layout_column="3"
                    android:id="@+id/btSearchList" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/department_list"
            android:id="@+id/txList"
            android:layout_gravity="center_horizontal" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_employee"
            android:id="@+id/listEmployee"
            android:layout_gravity="center_horizontal"
            android:choiceMode="singleChoice" />


    </LinearLayout>
</RelativeLayout>
